# 3DObjectTracking

./: LICENSE  readme.md
ICG/: CMakeLists.txt  readme.md
ICG/doc/: CMakeLists.txt  Doxyfile  customdoxygen.css
ICG/doc/high_level/: generator.md
ICG/examples/: CMakeLists.txt  choi_evaluator.cpp  choi_evaluator.h  evaluate_choi_dataset.cpp  evaluate_opt_dataset.cpp  evaluate_rbot_dataset.cpp  evaluate_ycb_dataset.cpp  opt_evaluator.cpp  opt_evaluator.h  parameter_study_choi_dataset.cpp  parameter_study_opt_dataset.cpp  parameter_study_rbot_dataset.cpp  parameter_study_ycb_dataset.cpp  rbot_evaluator.cpp  rbot_evaluator.h  record_camera_sequence.cpp  run_generated_tracker.cpp  run_on_camera_sequence.cpp  run_on_recorded_sequence.cpp  ycb_evaluator.cpp  ycb_evaluator.h
ICG/examples/dataset_converter/: convert_choi_dataset.m  convert_ycb_dataset_gt_poses.m
ICG/examples/generator_example/: config.yaml  default_model.yaml  detector.yaml  triangle.yaml
ICG/include/icg/: azure_kinect_camera.h  basic_depth_renderer.h  body.h  camera.h  common.h  depth_modality.h  depth_model.h  detector.h  generator.h  image_viewer.h  loader_camera.h  manual_detector.h  modality.h  model.h  normal_renderer.h  normal_viewer.h  optimizer.h  publisher.h  realsense_camera.h  refiner.h  region_modality.h  region_model.h  renderer.h  renderer_geometry.h  static_detector.h  tracker.h  viewer.h
ICG/src/: CMakeLists.txt  azure_kinect_camera.cpp  basic_depth_renderer.cpp  body.cpp  camera.cpp  common.cpp  depth_modality.cpp  depth_model.cpp  detector.cpp  generator.cpp  image_viewer.cpp  loader_camera.cpp  manual_detector.cpp  modality.cpp  model.cpp  normal_renderer.cpp  normal_viewer.cpp  optimizer.cpp  publisher.cpp  realsense_camera.cpp  refiner.cpp  region_modality.cpp  region_model.cpp  renderer.cpp  renderer_geometry.cpp  static_detector.cpp  tracker.cpp  viewer.cpp
M3T/: .clang-format  .gitignore  CMakeLists.txt  readme.md
M3T/data/_body/: default_body.yaml  schauma.yaml  triangle.yaml  triangle_depth_model.yaml  triangle_manual_detector.yaml  triangle_region_model.yaml  triangle_static_detector.yaml
M3T/data/_sequence/: color_camera.yaml  depth_camera.yaml
M3T/data/color_histograms_test/: color_histograms.yaml
M3T/data/detector_test/: detector_triangle_pose.txt
M3T/data/modality_test/: depth_modality.yaml  depth_modality_gradient.txt  depth_modality_hessian.txt  region_modality.yaml  region_modality_global_gradient.txt  region_modality_global_hessian.txt  region_modality_local_gradient.txt  region_modality_local_hessian.txt  texture_modality.yaml  texture_modality_gradient.txt  texture_modality_hessian.txt
M3T/data/model_test/: default_model.yaml  depth_model.yaml  region_model.yaml
M3T/data/optimizer_test/: optimizer.yaml  triangle_pose.txt
M3T/data/pen_paper_demo/: config.yaml  default_model.yaml  paper_detector.yaml  stabilo_body.yaml  stabilo_detector.yaml  stabilo_region_modality.yaml
M3T/data/refiner_test/: refiner.yaml  triangle_pose.txt
M3T/data/renderer_test/: focused_silhouette_renderer.yaml  full_basic_depth_renderer.yaml
M3T/data/tracker_test/: tracker.yaml  tracker_config.yaml  triangle_pose.txt
M3T/data/viewer_test/: image_color_viewer.yaml  image_depth_viewer.yaml  normal_color_viewer.yaml  normal_depth_viewer.yaml
M3T/doc/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml
M3T/doc/high_level/: developer.md  generator.md
M3T/examples/: CMakeLists.txt  choi_evaluator.cpp  choi_evaluator.h  constraint_convergence.cpp  evaluate_choi_dataset.cpp  evaluate_opt_dataset.cpp  evaluate_rbot_dataset.cpp  evaluate_rtb_dataset.cpp  evaluate_ycb_dataset.cpp  opt_evaluator.cpp  opt_evaluator.h  optimization_time.cpp  parameter_study_choi_dataset.cpp  parameter_study_opt_dataset.cpp  parameter_study_rbot_dataset.cpp  parameter_study_rtb_dataset.cpp  parameter_study_ycb_dataset.cpp  rbot_evaluator.cpp  rbot_evaluator.h  record_camera_sequence.cpp  rtb_evaluator.cpp  rtb_evaluator.h  run_generated_tracker.cpp  run_on_camera_sequence.cpp  run_on_recorded_sequence.cpp  run_pen_paper_demo.cpp  ycb_evaluator.cpp  ycb_evaluator.h
M3T/examples/dataset_converter/: convert_choi_dataset.m  convert_ycb_dataset_gt_poses.m
M3T/examples/urdf_pose_converter/: converter.py
M3T/include/m3t/: azure_kinect_camera.h  body.h  camera.h  (+31 more)
M3T/src/: CMakeLists.txt  azure_kinect_camera.cpp  basic_depth_renderer.cpp  body.cpp  camera.cpp  color_histograms.cpp  common.cpp  constraint.cpp  depth_modality.cpp  depth_model.cpp  detector.cpp  image_viewer.cpp  link.cpp  loader_camera.cpp  manual_detector.cpp  modality.cpp  model.cpp  normal_renderer.cpp  normal_viewer.cpp  optimizer.cpp  publisher.cpp  realsense_camera.cpp  refiner.cpp  region_modality.cpp  region_model.cpp  renderer.cpp  renderer_geometry.cpp  silhouette_renderer.cpp  soft_constraint.cpp  static_detector.cpp  subscriber.cpp  texture_modality.cpp  tracker.cpp  viewer.cpp
M3T/test/: CMakeLists.txt  body_test.cpp  camera_test.cpp  color_histograms_test.cpp  common_test.cpp  common_test.h  detector_test.cpp  modality_test.cpp  model_test.cpp  optimizer_test.cpp  refiner_test.cpp  renderer_geometry_test.cpp  renderer_test.cpp  tracker_test.cpp  viewer_test.cpp
RBGT/examples/: CMakeLists.txt  evaluate_ablation_study.cpp  evaluate_rbot_dataset.cpp  evaluator.h  record_camera_sequence.cpp  run_on_camera_sequence.cpp
SRT3D/examples/: CMakeLists.txt  evaluate_opt_dataset.cpp  evaluate_rbot_dataset.cpp  opt_evaluator.cpp  opt_evaluator.h  parameter_study_opt_dataset.cpp  parameter_study_rbot_dataset.cpp  rbot_evaluator.cpp  rbot_evaluator.h  record_camera_sequence.cpp  run_on_camera_sequence.cpp  run_on_recorded_sequence.cpp
SRT3D/src/: CMakeLists.txt  azure_kinect_camera.cpp  body.cpp  camera.cpp  common.cpp  image_viewer.cpp  loader_camera.cpp  model.cpp  normal_renderer.cpp  normal_viewer.cpp  occlusion_renderer.cpp  region_modality.cpp  renderer.cpp  renderer_geometry.cpp  tracker.cpp  viewer.cpp
src/: CMakeLists.txt  azure_kinect_camera.cpp  common.cpp  model.cpp  occlusion_mask_renderer.cpp  region_modality.cpp  viewer.cpp
(+51 files in other folders)
